# skpd_jac_3d

./: CMakeLists.txt  jac_3d.c  jac_3d_mpi.c  jac_3d_omp.c  render.py  run_polus.py  source.c
polus_res/: mpi_res.csv  omp_res.csv  single_res.csv
